smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/unclosed-string2.smithy
// Parse error at line 3, column 6 near `'`: Unexpected syntax. Perhaps an unclosed quote?
namespace abc.def
@foo('
